--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,33 @@
-version: '3'
+version: "3"
+
+volumes:
+  ignore_dir:
 
 services:
-  db:
-    image: postgres
-    environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: password
-    ports:
-      - '3306:3306'
-    volumes:
-      - ./tmp/db/data:/var/lib/postgresql/data
-
   app:
+    restart: always
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/app
-      #persist gem
-      - gem_data:/usr/local/bundle
+      - ./:/app
+      - ignore_dir:/app/tmp    # これはlocalに残って欲しくないから
+      - ignore_dir:/app/public # これも
     ports:
       - 3000:3000
     depends_on:
       - db
-    tty: true
-    stdin_open: true
+    env_file:
+      - .env
+    environment:
+      RAILS_ENV: development
 
-volumes:
-  gem_data:
+  db:
+    restart: always
+    image: postgres:11
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: deploy
+      POSTGRES_PASSWORD: password
+    volumes:
+      - ./tmp/db/data:/var/lib/postgresql/data
