fix: remove model test and setted rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -132,6 +132,7 @@ RSpec/EmptyLineAfterHook:
 RSpec/EmptyExampleGroup:
   Exclude:
     - 'spec/integration/**/*'
+    - 'spec/models/**/*'
 RSpec/LeakyConstantDeclaration:
   Exclude:
     - 'spec/integration/**/*'
